# itm_2025_fis_bufalo

./: .gitignore  README.md  README_Francisco_Modulos.txt  cajero_estado.json  configuracion.json  pyproject.toml  test_temperatura.py
.github/workflows/: ci.yml
docs/: Branch.md  Calidad.md  Calidad_Conversor.md  Pytest.md  Uv.md
src/bufalo/: bufalo_cli.py  cli.py  ppt.py  pyproject.toml
src/bufalo/config/: import json  test_preferencias.py
src/bufalo/modulos/: Tesoro.py  adivina.py  ahorcado.py  animal_race.py  buses.py  cajero.py  cajero_estado.json  calculadora.py  carrera.py  contadorPalabras.py  conversor.py  dado.py  follows.py  gestorInventario.py  historias.py  mayusminus.py  perro.py  ppt.py  preferencias.py  romanos.py  temperatura.py  test_preferencias.py  test_temperatura.py  tic_tac_toe.py  tictactoe.py  volado.py  youtube.py
src/bufalo/modulos/cajero.py/: cajero.py
src/data/: inventario.json
tests/: test_Tesoro.py  test_adivina.py  test_ahorcado.py  test_animal_race.py  test_arte.py  test_buses.py  test_cajero.py  test_calculadora.py  test_carrera.py  test_cli.py  test_contadorPalabras.py  test_conversor.py  test_dado.py  test_follows.py  test_gestorInventario.py  test_historias.py  test_mayusminus.py  test_perro.py  test_ppt.py  test_romanos.py  test_temperatura.py  test_tic_tac_toe.py  test_tictactoe.py  test_volado.py  test_youtube.py
