[project]
name = "bufalo"
version = "0.1.0"
description = "A CLI project for teaching Test Driven Development"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["click>=8.1.7", "yt-dlp>=2024.0.0", "imageio-ffmpeg>=0.4.9"]

[project.scripts]
bufalo = "bufalo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "ty>=0.0.1a32",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.ty]
# Configuration for ty if needed


[tool.pytest.ini_options]
addopts = "--cov=bufalo --cov-report=term-missing"
testpaths = ["tests"]
