[project]
name = "bufalo"
version = "0.1.0"
description = "A CLI project for teaching Test Driven Development"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["click>=8.1.7"]

[project.scripts]
bufalo = "bufalo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pytest>=8.0.0", "pytest-cov>=4.1.0", "ruff>=0.3.0"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.ty]
# Configuration for ty if needed


[tool.pytest.ini_options]
addopts = "--cov=bufalo --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.report]
# Revisa que esta sección esté correctamente en tu pyproject.toml
# Si no usas pyproject.toml, usa pytest.ini en su lugar.

# Omitir archivos que no nos importan en el reporte total (cli.py)
omit = [
    "src/bufalo/cli.py",
]

# Excluir líneas que son difíciles de cubrir, como definiciones triviales
exclude_lines = [
    # Excluye la definición del método is_finished
    '''def is_finished''', 
    # Excluye la entrada principal
    '''if __name__ == .__main__.:''',
    # Excluir el patrón de CLI que causaba problemas
    '''sys.exit''',
]